Adds endpoint to delete an event and unregister everyone from it
